# sp-plugin-rust

./: .env  Cargo.toml  README.md
src/: Shurjopay.rs  lib.rs  main.rs  shurjopay_client.rs
src/Shurjopay/: ShurjopayClient.rs
tests/: README.md  test.rs
