[package]
name = "sp-plugin-rust"
version = "0.1.0"
edition = "2021"
authors = ["Shakil Anwar <shakil7531@gmail.com>", "Mahmudul Islam <mahmudulislam299@gmail.com>"]
categories = ["encoding", "parser-implementations", "plugin"]
description = "Rust plugin for for quick integration of shurjopay API"
documentation = "https://docs.rs/sp-plugin-rust"
keywords = ["shurjopay", "fintech", "plugin"]
license = "MIT"
repository = "https://github.com/shurjopay-plugins/sp-plugin-rust"
rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
reqwest = { version = "0.11", features = ["json","blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# log = "0.4.0"
# env_logger = "0.10.0"
# open = "3.0.3"
dotenv = "0.15.0"
assert-str = "0.1"
webbrowser = "0.8.2"